--- a/client/index.html
+++ b/client/index.html
@@ -3,12 +3,12 @@
 <head>
    <meta charset="utf-8">
 	 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	 <base href="../client/">
+	 <!-- <base href="../client/"> -->
    <link rel="icon" href="logo.icon" type="image/x-icon">
 	
 	<!-- public -->
-	<link rel="stylesheet" href="project/index.css">
-	<link rel="stylesheet" href="project/jeez.css">
+	<!-- <link rel="stylesheet" href="project/index.css">
+	<link rel="stylesheet" href="project/jeez.css"> -->
 	
 
 	<!-- js -->
